# fastapi-project

./: .coverage  pyproject.toml
src/: app.py
tests/: test_app.py
