[tool.poetry]
name = "curso-fastapi"
version = "0.1.0"
description = ""
authors = ["Magno Matos <magnomatos822@gmail.com>"]
readme = "README.md"

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"


[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.2"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
ruff = "^0.4.4"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
